
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int * h_addr_list; } ;
typedef int addr ;


 int AF_INET ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char const*) ;
 int htons (int) ;
 int memcpy (int *,int ,int ) ;
 int socket (int ,int ,int ) ;

int network(const char *host, int port)
{
 struct sockaddr_in addr;
 struct hostent *he;
 int sock;

 sock = socket(AF_INET, SOCK_STREAM, 0);

 addr.sin_family = AF_INET;

 if((he = gethostbyname(host)) == ((void*)0))
  return 0;

 memcpy(&addr.sin_addr, he->h_addr_list[0], he->h_length);

 addr.sin_port = htons(port);

 connect(sock, (struct sockaddr *)&addr, sizeof(addr));

 return sock;
}
